--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p class="p2">TRACK</p>
         </div>
         <div class="box-3">
-            <img class="location" src="Location.jpeg" alt="location-icon">
+            <img class="location" src="Img/Location.jpeg" alt="location-icon">
             <p class="p3">LOCATIONS</p>
         </div>
         </section>
@@ -61,31 +61,31 @@
         <div class="section-1">
         
         <p>
-            <img class="icon1" src="icon_courier_purple.png" alt="courier-icon">
+            <img class="icon1" src="Img/icon_courier_purple.png" alt="courier-icon">
             <p>
                 DROP OF A PACKAGE
             </p>
         </p>
         <p>
-            <img class="icon2" src="icon_delivery_purple.png" alt="delivery-icon">
+            <img class="icon2" src="Img/icon_delivery_purple.png" alt="delivery-icon">
             <p>
                 REDIRECT A PACKAGE
             </p>
         </p>
         <p>
-            <img class="icon3" src="retail-services.svg" alt="retail-icon">
+            <img class="icon3" src="Img/retail-services.svg" alt="retail-icon">
             <p>
                 STORE HOURS AND SERVICES
             </p>
         </p>
         <p>
-            <img class="icon4" src="icon_alert_purple_lg.png" alt="icon">
+            <img class="icon4" src="Img/icon_alert_purple_lg.png" alt="icon">
             <p>
                 SERVICE ALERTS
             </p>
         </p>
         <p>
-            <img class="icon5" src="icon_returns_purple.png" alt="icon">
+            <img class="icon5" src="Img/icon_returns_purple.png" alt="icon">
             <p>
                 RETURN A PACKAGE
             </p>
