--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <br>
         <section>
         <div class="box-1">
-            <img class="R&T" src="" alt="RT-icon">
+            <img class="R&T" src="Img/R&S.png" alt="RT-icon">
             <p class="p1">RATE & SHIP</p>
         </div>
         <div class="box-2">
-            <img class="track" src="" alt="track-icon">
+            <img class="track" src="Img/parcel-tracking.png" alt="track-icon">
             <p class="p2">TRACK</p>
         </div>
         <div class="box-3">
@@ -48,48 +48,48 @@
             <p class="p3">LOCATIONS</p>
         </div>
         </section>
-        <div class="track">
-            <textarea placeholder="TRACKING ID"></textarea>
+        <div class="tracking">
+            <input placeholder="TRACKING ID"></input>
             <div class="btn">
-                <button>TRACK</button>
+                TRACK
             </div>
-            <p>MULTIPLE TRACKING NUMBERS | NEED HELP?</p>
         </div>
+        <span class="help"><p>MULTIPLE TRACKING NUMBERS | NEED HELP?</p></span>
     </div>
     <div class="main-1">
         <h2>Manage your shipments and returns</h2>
         <div class="section-1">
         
-        <p>
+        <div class="sec-1">
             <img class="icon1" src="Img/icon_courier_purple.png" alt="courier-icon">
             <p>
                 DROP OF A PACKAGE
             </p>
-        </p>
-        <p>
+        </div>
+        <div class="sec-2">
             <img class="icon2" src="Img/icon_delivery_purple.png" alt="delivery-icon">
             <p>
                 REDIRECT A PACKAGE
             </p>
-        </p>
-        <p>
+        </div>
+        <div class="sec-3">
             <img class="icon3" src="Img/retail-services.svg" alt="retail-icon">
             <p>
                 STORE HOURS AND SERVICES
             </p>
-        </p>
-        <p>
+        </div>
+        <div class="sec-4">
             <img class="icon4" src="Img/icon_alert_purple_lg.png" alt="icon">
             <p>
                 SERVICE ALERTS
             </p>
-        </p>
-        <p>
+        </div>
+        <div class="sec-5">
             <img class="icon5" src="Img/icon_returns_purple.png" alt="icon">
             <p>
                 RETURN A PACKAGE
             </p>
-        </p>
+        </div>
         </div>
         <div class="section-2">
             <h2>Reliable shipping on your schedule</h2>
