--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         <div class="section-2">
             <h2>Reliable shipping on your schedule</h2>
             <p>
-                <img class="img1" src="" alt="icon">
+                <img class="img1" src="Img/We pick up.jpeg" alt="icon">
                 <p>
-                    <span class="span-1">We pick up. You save time.</span>
+                    <span class="span-1">We pick up. You save time.</span><br>
                         Let us come to your home or business to pick up
                         your package. It's easy to schedule a one-time
                         pickup online. If you have recurring delivery needs,
@@ -105,9 +105,9 @@
                 </p>
             </p>
             <p>
-                <img class="img2" src="" alt="icon">
+                <img class="img2" src="Img/drop off.jpeg" alt="icon">
                 <p>
-                    <span class="span-1">Drop off packages while you shop</span>
+                    <span class="span-1">Drop off packages while you shop</span><br>
                     If you're out and about, combine your shopping
                     and shipping. Drop off packages at thousands of
                     locations, including FedEx Office, Dollar General,
