--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
         <nav class="navbar">
             <ul>
                 <li class="nav-item">
-                  <a href="#about" class="nav-link" id="nav-link">Shipping</a>
+                    <a href="#home" class="nav-link"><img src="Img/Logo.png" class="Logo" alt="Logo"></a>
                 </li>
                 <li class="nav-item">
-                  <a href="#stars" class="nav-link" id="nav-link">Tracking</a>
+                  <a href="#about" class="nav-link" id="nav-link">Shipping ∨</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#stars" class="nav-link" id="nav-link">Tracking ∨</a>
                 </li>
                 <li class="nav-item">
                   <a href="#stakeholders" class="nav-link" id="nav-link"
-                    >Design & Print</a
+                    >Design & Print ∨</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a href="#sub" class="nav-link" id="nav-link">Locations</a>
+                  <a href="#sub" class="nav-link" id="nav-link">Locations ∨</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#sub" class="nav-link" id="nav-link">Support</a>
-                  </li>
+                    <a href="#sub" class="nav-link" id="nav-link">Support ∨</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#sub" class="sign-up" id="nav-link">Sign Up or Log In</a>
+                </li> 
           </ul>
         </nav>
     </header>
@@ -54,7 +60,7 @@
                 TRACK
             </div>
         </div>
-        <span class="help"><p>MULTIPLE TRACKING NUMBERS | NEED HELP?</p></span>
+        <span ><p class="help">MULTIPLE TRACKING NUMBERS | NEED HELP?</p></span>
     </div>
     <div class="main-1">
         <h2>Manage your shipments and returns</h2>
@@ -93,9 +99,10 @@
         </div>
         <div class="section-2">
             <h2>Reliable shipping on your schedule</h2>
-            <p>
-                <img class="img1" src="Img/We pick up.jpeg" alt="icon">
-                <p>
+        <section class="scndSection">
+            <div class="sec-2-content1">
+                <p class="schedule">
+                    <img class="img1" src="Img/We pick up.jpeg" alt="icon">
                     <span class="span-1">We pick up. You save time.</span><br>
                         Let us come to your home or business to pick up
                         your package. It's easy to schedule a one-time
@@ -103,10 +110,10 @@
                         plan ahead with regular pickups.
                     <span class="span-2">SCHEDULE A PICKUP</span> 
                 </p>
-            </p>
-            <p>
-                <img class="img2" src="Img/drop off.jpeg" alt="icon">
-                <p>
+            </div>
+            <div class="sec-2-content2">
+                <p class="schedule">
+                    <img class="img2" src="Img/drop off.jpeg" alt="icon">
                     <span class="span-1">Drop off packages while you shop</span><br>
                     If you're out and about, combine your shopping
                     and shipping. Drop off packages at thousands of
@@ -114,7 +121,8 @@
                     Walgreens, and select grocery stores.
                     <span class="span-2">FIND LOCATIONS</span>
                 </p>
-            </p>
+            </div>
+        </section>
         </div>
     </div>
     <div class="main-2">
