--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                   <a href="#stars" class="nav-link" id="nav-link">Tracking ∨</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#stakeholders" class="nav-link" id="nav-link"
-                    >Design & Print ∨</a
-                  >
+                  <a href="#stakeholders" class="nav-link" id="nav-link">Design & Print ∨</a>
                 </li>
                 <li class="nav-item">
                   <a href="#sub" class="nav-link" id="nav-link">Locations ∨</a>
@@ -40,7 +38,7 @@
     <div class="top">
         <h1>Ship, manage, track, deliver</h1>
         <br>
-        <section>
+        <section class="boxes">
         <div class="box-1">
             <img class="R&T" src="Img/R&S.png" alt="RT-icon">
             <p class="p1">RATE & SHIP</p>
@@ -127,10 +125,37 @@
     </div>
     <div class="main-2">
         <h2>We're behind your small business</h2>
+    <section class="thrdSection">
+        <div class="sec-3-content1">
+            <p class="schedule">
+                <img class="img3" src="Img/Set Up Shop.jpeg" alt="icon">
+                <span class="span-1">Set your small business up for success</span><br>
+                Visit the updated Small Business Center for the latest resources from experts and peers. Find shipping tools to improve deliveries for you and your customers.
+                <span class="span-2">FIND TIPS AND TOOLS</span> 
+            </p>
+        </div>
+        <div class="sec-3-content2">
+            <p class="schedule">
+                <img class="img4" src="Img/Thousands of Prdcts.jpeg" alt="icon">
+                <span class="span-1">Thousands of packages at a glance</span><br>
+                It’s simple to manage up to 20,000 shipments and run reports in your advanced tracking dashboard. View estimated delivery windows to keep customers informed.
+                <span class="span-2">TRACK FOR FREE</span>
+            </p>
     </div>
+    </section>
     <footer>
-        <p>&copy; FedEx 1995-2023</p>
+        <p class="copyright">&copy; FedEx 1995-2023</p>
+        <ul class="foot">
+            <li class="foot-item">
+                <a href="#sub" class="foot-link" id="nav-link">Site Map |</a>
+              </li>
+              <li class="foot-item">
+                  <a href="#sub" class="foot-link" id="nav-link">Terms of Use |</a>
+              </li>
+              <li class="foot-item">
+                  <a href="#sub" class="foot-link" id="nav-link">Privacy & Security</a>
+              </li> 
+        </ul>
     </footer>
-<script src="script.js"></script>    
 </body>
 </html>
