--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FedEx Site</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
 </head>
 <body>
     <header>
@@ -103,7 +107,7 @@
             <div class="sec-2-content1">
                 <p class="schedule">
                     <img class="img1" src="Img/We pick up.jpeg" alt="icon">
-                    <h5 class="span-1">We pick up. You save time.</h5><br>
+                    <h4 class="span-1">We pick up. You save time.</h4><br>
                         Let us come to your home or business to pick up
                         your package. It's easy to schedule a one-time
                         pickup online. If you have recurring delivery needs,
@@ -114,7 +118,7 @@
             <div class="sec-2-content2">
                 <p class="schedule">
                     <img class="img2" src="Img/drop off.jpeg" alt="icon">
-                    <h5 class="span-1">Drop off packages while you shop</h5><br>
+                    <h4 class="span-1">Drop off packages while you shop</h4><br>
                     If you're out and about, combine your shopping
                     and shipping. Drop off packages at thousands of
                     locations, including FedEx Office, Dollar General,
@@ -131,17 +135,17 @@
         <div class="sec-3-content1">
             <img class="img3" src="Img/Set Up Shop.jpeg" alt="icon">
             <p class="schedule">
-                <h6 class="span-1">Set your small business up for success</h6><br>
+                <h4 class="span-1">Set your small business up for success</h4><br>
                 Visit the updated Small Business Center for the latest resources from experts and peers. Find shipping tools to improve deliveries for you and your customers.
-                <h6 class="span-2">FIND TIPS AND TOOLS</h6> 
+                <h4 class="span-2">FIND TIPS AND TOOLS</h4> 
             </p>
         </div>
         <div class="sec-3-content2">
             <img class="img4" src="Img/Thousands of Prdcts.jpeg" alt="icon">
             <p class="schedule">
-                <h6 class="span-1">Thousands of packages at a glance</h6><br>
+                <h4 class="span-1">Thousands of packages at a glance</h4><br>
                 It’s simple to manage up to 20,000 shipments and run reports in your advanced tracking dashboard. View estimated delivery windows to keep customers informed.
-                <h6 class="span-2">TRACK FOR FREE</h6>
+                <h4 class="span-2">TRACK FOR FREE</h4>
             </p>
         </div>
     </section>
@@ -149,7 +153,7 @@
 
     <div style="margin: 2% 15%;">
         <p>
-            <h6><b>FedEx money-back guarantee</b></h6><br>
+            <h4><b>FedEx money-back guarantee</b></h4><br>
             We offer a money-back guarantee for select services. This guarantee may be suspended, modified, or revoked. Please check money-back guarantee for the latest status of our money-back guarantee.
             <br><span style="font-size: small;">* More than 50% of the U.S. population on Sundays.</span>
         </p>
@@ -157,7 +161,7 @@
 
     <div class="main-3">
         <div class="about" id="about">
-            <p>
+            <p class="aboutInfo">
                 <h6>OUR COMPANY</h6>
                 About FedEx
                 Our Portfolio
@@ -168,7 +172,7 @@
                 Newsroom
                 Contact Us
             </p>
-            <p>
+            <p class="aboutInfo">
                 <h6>MORE FROM FEDEX</h6>
                 FedEx Compatible
                 FedEx Developer Portal
@@ -176,12 +180,22 @@
                 FedEx Cross Border
                 ShopRunner
             </p>
-            <p>
+            <p class="aboutInfo">
                 <h6>LANGUAGE</h6>
                 United States United States
                 English
             </p>
-            <hr>
+            <hr style="margin: 40px 0px;">
+            <div class="social-links">
+                <p style="color: purple; font-size: small; font-weight: bold;">FOLLOW FEDEX</p>
+                <a href="#" class="links1"><i class="fa fa-envelope"></i></a>
+                <a href="#" class="links2"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="links3"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="links4"><i class="fa fa-instagram"></i></a>
+                <a href="#" class="links5"><i class="fa fa-linkedin"></i></a>
+                <a href="#" class="links6"><i class="fa fa-youtube"></i></a>
+                <a href="#" class="links7"><i class="fa fa-pinterest"></i></a>
+            </div>
         </div>
     </div>
 
