--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </p>
             <hr style="margin: 40px 0px;">
             <div class="social-links">
-                <p style="color: blueviolet; font-family: monospace; font-size: small; font-weight: bold;">FOLLOW FEDEX</p>
+                <p style="margin: 15px; color: blueviolet; font-family: monospace; font-size: small; font-weight: bold;">FOLLOW FEDEX</p>
                 <a href="#" class="links1"><i class="fa fa-envelope"></i></a>
                 <a href="#" class="links2"><i class="fa fa-facebook"></i></a>
                 <a href="#" class="links3"><i class="fa fa-twitter"></i></a>
