--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
             <hr style="margin: 40px 0px;">
             <div class="social-links">
                 <p style="margin: 15px; color: blueviolet; font-family: monospace; font-size: small; font-weight: bold;">FOLLOW FEDEX</p>
-                <a href="#" class="links1"><i class="fa fa-envelope"></i></a>
-                <a href="#" class="links2"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="links3"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="links4"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="links5"><i class="fa fa-linkedin"></i></a>
-                <a href="#" class="links6"><i class="fa fa-youtube"></i></a>
-                <a href="#" class="links7"><i class="fa fa-pinterest"></i></a>
+                <a href="#" class="links1"><i class="fa fa-envelope" id="fa1"></i></a>
+                <a href="#" class="links2"><i class="fa fa-facebook" id="fa2"></i></a>
+                <a href="#" class="links3"><i class="fa fa-twitter" id="fa3"></i></a>
+                <a href="#" class="links4"><i class="fa fa-instagram" id="fa4"></i></a>
+                <a href="#" class="links5"><i class="fa fa-linkedin" id="fa5"></i></a>
+                <a href="#" class="links6"><i class="fa fa-youtube" id="fa6"></i></a>
+                <a href="#" class="links7"><i class="fa fa-pinterest" id="fa7"></i></a>
             </div>
         </div>
     </div>
