--- a/index.html
+++ b/index.html
@@ -133,12 +133,14 @@
         <h2>We're behind your small business</h2>
     <section class="thrdSection">
         <div class="sec-3-content1">
-            <img class="img3" src="Img/Set Up Shop.jpeg" alt="icon">
-            <p class="schedule">
+            <div class="imgDiv">
+                <img class="img3" src="Img/Set Up Shop.jpeg" alt="icon">
+            </div>
+            <div class="schedule">
                 <span class="span-1">Set your small business up for success</span><br>
                 Visit the updated Small Business Center for the latest resources from experts and peers. Find shipping tools to improve deliveries for you and your customers.
                 <span class="span-2">FIND TIPS AND TOOLS</span> 
-            </p>
+            </div>
         </div>
         <div class="sec-3-content2">
             <img class="img4" src="Img/Thousands of Prdcts.jpeg" alt="icon">
