--- a/index.html
+++ b/index.html
@@ -133,12 +133,10 @@
         <h2>We're behind your small business</h2>
     <section class="thrdSection">
         <div class="sec-3-content1">
-            <div class="imgDiv">
                 <img class="img3" src="Img/Set Up Shop.jpeg" alt="icon">
-            </div>
             <div class="schedule">
                 <span class="span-1">Set your small business up for success</span><br>
-                Visit the updated Small Business Center for the latest resources from experts and peers. Find shipping tools to improve deliveries for you and your customers.
+                Visit the updated Small Business Center for the latest resources from experts and peers. Find shipping tools to improve deliveries for you and your customers.<br>
                 <span class="span-2">FIND TIPS AND TOOLS</span> 
             </div>
         </div>
@@ -146,7 +144,7 @@
             <img class="img4" src="Img/Thousands of Prdcts.jpeg" alt="icon">
             <p class="schedule">
                 <span class="span-1">Thousands of packages at a glance</span><br>
-                It’s simple to manage up to 20,000 shipments and run reports in your advanced tracking dashboard. View estimated delivery windows to keep customers informed.
+                It’s simple to manage up to 20,000 shipments and run reports in your advanced tracking dashboard. View estimated delivery windows to keep customers informed.<br>
                 <span class="span-2">TRACK FOR FREE</span>
             </p>
         </div>
