--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </section>
     </div>
 
-    <div style="margin: 2% 15%;">
+    <div class="money-back">
         <p>
             <span><b>FedEx money-back guarantee</b></span><br>
             We offer a money-back guarantee for select services. This guarantee may be suspended, modified, or revoked. Please check money-back guarantee for the latest status of our money-back guarantee.
