--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="sec-2-content1">
                 <p class="schedule">
                     <img class="img1" src="Img/We pick up.jpeg" alt="icon">
-                    <span class="span-1">We pick up. You save time.</span><br>
+                    <span class="span-1"><b>We pick up. You save time.</b></span><br>
                         Let us come to your home or business to pick up
                         your package. It's easy to schedule a one-time
                         pickup online. If you have recurring delivery needs,
@@ -118,7 +118,7 @@
             <div class="sec-2-content2">
                 <p class="schedule">
                     <img class="img2" src="Img/drop off.jpeg" alt="icon">
-                    <span class="span-1">Drop off packages while you shop</span><br>
+                    <span class="span-1"><b>Drop off packages while you shop.</b></span><br>
                     If you're out and about, combine your shopping
                     and shipping. Drop off packages at thousands of
                     locations, including FedEx Office, Dollar General,
@@ -163,7 +163,7 @@
         <div class="about" id="about">
             <div class="inAbout">
             <p class="aboutInfo">
-                <span style="color:blueviolet; font-weight:bold;">OUR COMPANY</span>
+                <span style="color:blueviolet; font-weight:bold; padding-bottom: 15px;">OUR COMPANY</span>
                 About FedEx<br>
                 Our Portfolio<br>
                 Investor Relations<br>
@@ -174,7 +174,7 @@
                 Contact Us<br>
             </p>
             <p class="aboutInfo">
-                <span style="color:blueviolet; font-weight:bold;">MORE FROM FEDEX</span>
+                <span style="color:blueviolet; font-weight:bold; padding-bottom: 15px;">MORE FROM FEDEX</span>
 
                 FedEx Compatible<br>
                 FedEx Developer Portal<br>
@@ -183,7 +183,7 @@
                 ShopRunner<br>
             </p>
             <p class="aboutInfo">
-                <span style="color:blueviolet; font-weight:bold;">LANGUAGE</span>
+                <span style="color:blueviolet; font-weight:bold; padding-bottom: 15px;">LANGUAGE</span>
 
                 United States<br>
                 English
