--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           </ul>
         </nav>
     </header>
+    <!--Hero section-->
     <div class="top" id="ship">
         <h1>Ship, manage, track, deliver</h1>
         <br>
